# ruralDoc

./: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  README_ANDROID.md  index.html  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/medinova/app/: MedinovaApplication.kt
app/src/main/java/com/medinova/app/data/remote/: ApiService.kt
app/src/main/java/com/medinova/app/data/repository/: MedinovaRepository.kt
app/src/main/java/com/medinova/app/di/: NetworkModule.kt
app/src/main/java/com/medinova/app/domain/model/: Appointment.kt  ChatMessage.kt  Doctor.kt
app/src/main/java/com/medinova/app/presentation/: MainActivity.kt
app/src/main/java/com/medinova/app/presentation/call/: VideoCallActivity.kt
app/src/main/java/com/medinova/app/presentation/navigation/: MedinovaNavigation.kt  Screen.kt
app/src/main/java/com/medinova/app/presentation/screens/appointment/: AppointmentScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/chat/: ChatScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/home/: HomeScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/main/: MainScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/onboarding/: OnboardingScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/profile/: ProfileScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/search/: SearchScreen.kt
app/src/main/java/com/medinova/app/presentation/screens/splash/: SplashScreen.kt
app/src/main/java/com/medinova/app/presentation/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
config/: app.json
docs/: api.md
include/controllers/: BookingController.h  UserController.h
include/database/: AppointmentRepository.h  BaseRepository.h  BaseRepository.tpp  DatabaseManager.h  DoctorRepository.h  UserRepository.h
include/middleware/: AuthMiddleware.h  CorsMiddleware.h  LoggingMiddleware.h
include/models/: Appointment.h  BaseEntity.h  Clinic.h  Doctor.h  Prescription.h  User.h
include/services/: BookingService.h  NotificationService.h  PaymentService.h  UserService.h  ValidationService.h
include/utils/: ConfigManager.h  CryptoUtils.h  Logger.h  ResponseHelper.h  ValidationUtils.h
src/: main.cpp
src/database/: BaseRepository.cpp  DatabaseManager.cpp  UserRepository.cpp
src/middleware/: AuthMiddleware.cpp  CorsMiddleware.cpp  LoggingMiddleware.cpp
src/models/: Appointment.cpp  BaseEntity.cpp  Clinic.cpp  Doctor.cpp  Prescription.cpp  User.cpp
src/services/: NotificationService.cpp  UserService.cpp  ValidationService.cpp
src/utils/: ConfigManager.cpp  CryptoUtils.cpp  Logger.cpp  ResponseHelper.cpp  ValidationUtils.cpp
